--- a/index.html
+++ b/index.html
@@ -284,7 +284,7 @@
 
         <div id="menu-screen">
             <h1 id="game-title">QUANTUM HOPPER</h1>
-            <div class="copyright">Developed by - <a href="https://quantum-hopper.onrender.com/" target="_blank"
+            <div class="copyright">Developed by - <a href="https://himanshu-portfolio-woad.vercel.app/" target="_blank"
                     style="color: #0011ff; text-decoration: none;">Himanshu Santani</a></div>
 
             <button id="start-btn" class="btn pulse">START GAME</button>
